[tool.poetry]
name = "cobra-orm"
version = "0.1.0"
description = ""
authors = ["TitaniumBrain <titaniumbrain@vivaldi.net>"]
readme = "README.md"
packages = [{include = "cobra_orm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
